--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ serde = { version = "1.0", features = ["derive"] }
 toml = "0.8"               # to load the rule engine config
 clap = { version = "4.5", features = ["derive"] } # for CLI args
 inquire = "0.7.5"
-pager = "0.16" 
+pager = "0.16"
+tempfile = "3" 
